src/test/ui/privacy/private-struct-field-pattern.stderr
error[E0451]: field `x` of struct `a::Foo` is private
  --> $DIR/private-struct-field-pattern.rs:15:15
   |
LL | /     pub struct Foo {
LL | |         x: isize
LL | |     }
   | |_____- `a::Foo` defined here
...
LL |           Foo { x: _ } => {}  //~ ERROR field `x` of struct `a::Foo` is private
   |           ------^^^^--
   |           |     |
   |           |     private field
   |           `a::Foo` cannot be destructured due to private field

error: aborting due to previous error

For more information about this error, try `rustc --explain E0451`.
